--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,246 @@
-.App {
-  text-align: center;
+@import url(./responsive.css);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.navbar {
+  z-index: 1000;
+  width: 100%;
+  padding: 0 15px !important;
+}
+.nav-active {
+  background-color: #f8f9fa !important;
+  transition: all 0.3s;
+}
+.active {
+  margin: 0 20px;
+  padding: 9px 15px;
+  border-bottom: 1px solid rgb(182, 65, 65);
+  color: white;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+.navbar-nav li a {
+  transition: all 0.5s ease 0s;
+}
+.logo {
+  max-width: 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer-links {
+  color: rgba(0, 0, 0, 0.55);
+  text-decoration: none;
+}
+.footer-links:hover {
+  color: inherit;
+}
+.footer-links:focus {
+  color: #000000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* HAMBURGER MENU ICON */
+.navbar-toggler1 {
+  display: none;
+}
+.navbar-toggler1 .checkbox {
+  position: relative;
+  display: block;
+  height: 32px;
+  width: 32px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-toggler1 .hamburger-lines {
+  position: absolute;
+  top: 10px;
+  display: block;
+  height: 20px;
+  width: 25px;
+  z-index: 2;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.navbar-toggler1 .hamburger-lines .line {
+  display: block;
+  height: 2px;
+  width: 100%;
+  background: #0e2431;
+}
+
+.navbar-toggler1 .hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar-toggler1 .hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.navbar-toggler1 .hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.navbar-toggler1 input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+.navbar-toggler1 input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+.navbar-toggler1 input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+.image-dp {
+  border-radius: 50% !important;
+  background-color: "#e7e7e7";
+}
+
+.home {
+  display: grid;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Skills */
+
+.skills {
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.skills-bar {
+  padding: 25px 30px;
+}
+
+.skills-bar .bar {
+  margin: 25px 0;
+}
+
+.skills-bar .bar .info span {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.skills-bar .bar .info {
+  margin-bottom: 8px;
+  color: #07374a;
+}
+
+.skills-bar .bar .progress-line {
+  height: 10px;
+  width: 550px;
+  background: #f0f0f0;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.bar .progress-line span {
+  position: absolute;
+  background: #000000;
+  height: 100%;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+@keyframes animate {
+  100% {
+    transform: scaleX(1);
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.progress-line .html {
+  width: 80%;
+}
+.progress-line .css {
+  width: 70%;
+}
+.progress-line .bootstrap {
+  width: 82%;
+}
+.progress-line .react {
+  width: 75%;
+}
+.progress-line .mui {
+  width: 60%;
+}
+.progress-line .nodejs {
+  width: 55%;
+}
+.progress-line .javascript {
+  width: 62%;
+}
+.progress-line .c {
+  width: 75%;
+}
+
+.bar .progress-line span::before {
+  position: absolute;
+  content: "";
+  height: 0;
+  right: 0;
+  top: -14px;
+  width: 0;
+  border: 7px solid transparent;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  border-top-style: #f0f0f0;
+  border-top-color: #07374a;
+}
+
+.bar .progress-line span::after {
+  position: absolute;
+  right: 0;
+  top: -28px;
+  color: #f0f0f0;
+  font-size: 12px;
+  font-weight: 700;
+  background: #000000;
+  padding: 1px 8px;
+}
+
+.progress-line .html::after {
+  content: "80%";
+}
+.progress-line .css::after {
+  content: "70%";
+}
+.progress-line .bootstrap::after {
+  content: "82%";
+}
+.progress-line .react::after {
+  content: "75%";
+}
+.progress-line .nodejs::after {
+  content: "55%";
+}
+.progress-line .mui::after {
+  content: "60%";
+}
+.progress-line .javascript::after {
+  content: "62%";
+}
+.progress-line .c::after {
+  content: "75%";
+}
+
+/* ////........Media Query........//// */
+
+@media (max-width: 700px) {
+  .skills {
+    width: 80%;
+  }
+
+  .skills-bar .bar .progress-line {
+    width: 100%;
   }
 }
